--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,17 +1,18 @@
 .main{
-  padding: 40px 0;
+  padding: 30px 0;
 }
 .main input,
 .main input::-webkit-input-placeholder {
-   font-size: 11px;
+   font-size: 14px;
    padding-top: 3px;
 }
 .main-center{
   margin-top: 30px;
+  font-size: 14px;
   margin: 0 auto;
   max-width: 400px;
    padding: 10px 40px;
- background:#009edf;
+ background: #007bff;
      color: #FFF;
    text-shadow: none;
  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
