--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,8 +16,19 @@
       <div class="col-md-6 offset-md-3">
         <br><br><br>
         <%= form_for resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin mt-3" } do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
           <h1 class="h3 mb-3 font-weight-normal text-center">Sign up</h1>
           <%= devise_error_messages! %>
+
+          <div class="field">
+            <%= f.label :first_name %>
+            <%= f.text_field :first_name, autofocus: true, class: "form-control"%>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :last_name %>
+            <%= f.text_field :last_name, class: "form-control"%>
+          </div>
           <div class="form-group">
             <%= f.label :email, "Email" %><br />
             <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
