--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,7 +12,7 @@
   <body>
 
     <div class="card-body">
-     <h1>About this event:</h1>
+     <h1>A propos de cet évènement</h1>
 
     <br>
     <br>
